# nasalCavitySegmentation

./: .gitignore  1_seg.py  LICENSE  README.md  config.yaml  conv.py  funcs.py  main.py  pyproject.toml  run_source.sh  todos.md
BENCHMARKS/: README.md  benchScript.sh  general_jobsys.xml  plotbench.ipynb  plotbench.py
CASES/:  DDP_pytorch_AT_regr_mod.py  DDP_pytorch_3dconv_AT_LD.py  DDP_pytorch_AT.py  DDP_pytorch_AT_3DCAEregr.py  DDP_pytorch_AT_3Dconv.py  DDP_pytorch_AT_CAEregr.py  DDP_pytorch_AT_GAN.py  DDP_pytorch_AT_LD.py  DDP_pytorch_AT_LD_2.py  DDP_pytorch_AT_LD_3DPINNs.py  DDP_pytorch_AT_LD_DM.py  DDP_pytorch_AT_LD_mod.py  DDP_pytorch_AT_PINNs.py  DDP_pytorch_AT_apex.py  DDP_pytorch_AT_regr.py  DDP_pytorch_mnist.py  DDP_pytorch_resnet.py  DS_pytorch_AT.py  DS_pytorch_AT_LD_mod.py  DS_pytorch_mnist.py  HeAT_pytorch_AT.py  HeAT_pytorch_mnist.py  Hor_pytorch_AT.py  Hor_pytorch_AT_LD_mod.py  Hor_pytorch_mnist.py  Hor_pytorch_resnet.py  README.md
CTEAMD_DDP/: DDP_startscript  DDP_startscript.sh  README.md  createENV.sh  installWheels.sh  reqs.txt
CTEAMD_DeepSpeed/: DS_config.json  DS_startscript.sh  README.md  createENV.sh  installWheels.sh
CTEAMD_HeAT/: HeAT_startscript.sh  README.md  heat_startscript.sh  installWheels.sh  reqs.txt
CTEAMD_Horovod/: Hor_startscript.sh  README.md  horo_startscript.sh  installWheels.sh  reqs.txt
Deep_DDP/: DDP_startscript  DDP_startscript_deep.sh  README.md  conda_torch.sh  createEnv.sh  reqs.txt
Deep_DeepSpeed/: DS_startscript_deep.sh
Deep_HeAT/: HeAT_startscript_deep.sh  README.md  example_mnist_heat.py  install_heat.sh  (+1 more)
(+976 files in other folders)
