[project]
name = "ai4hpc-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cython>=3.0.12",
    "dicom2stl>=0.5.0",
    "hydra-core>=1.3.2",
    "numpy>=2.0.2",
    "numpy-stl>=3.2.0",
    "pydicom>=2.4.4",
    "pynrrd>=1.1.3",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "shapely>=2.1.0",
    "simpleitk>=2.4.1",
    "split>=0.4",
    "tensorflow>=2.19.0",
    "trimesh>=4.6.8",
    "vtk>=9.4.2",
]
